--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "prettier.useTabs": true
+    "prettier.useTabs": true,
+    "editor.renameOnType": true,
+    "html.format.wrapLineLength": 150
 }
